# CompGeo

./: CMakeLists.txt  README.md
lib/Eigen/: AlignedVector
src/: BasicGeometry.cpp  CMakeLists.txt
src/convexhull/: CMakeLists.txt  ConvexHull2D.cpp  ConvexHull2D.h
src/intersection/: eventQ.h
src/js/threeD/track/: trackball.html
src/test/: CMakeLists.txt  test_bst.cpp  test_eventQ.cpp  test_viewer.cpp
src/utils/: BST.h  CMakeLists.txt  geom_predicates.cpp  geom_predicates.h  sorting.cpp  sorting.h
trajopt/: CMakeLists.txt
trajopt/lib/: CMakeLists.txt
trajopt/lib/osgviewer/: CMakeLists.txt  CMakeLists.txt~  plotting.cpp  plotting.h  simplescene.cpp  util.cpp  util.h
trajopt/src/: CMakeLists.txt
trajopt/src/osgviewer/: CMakeLists.txt  environment.h  osgviewer.cpp  osgviewer.hpp  plotting.cpp  plotting.h  simplescene.cpp  simplescene.h  util.cpp  util.h
trajopt/src/test/: CMakeLists.txt  test_viewer.cpp
